# fastapi-article-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  .uvrc  Dockerfile  FastAPI_in_Action.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: auth.py  database.py  main.py  models.py  security.py
app/routes/: auth.py  background_tasks.py  items.py  users.py
postman/: FastAPI_Article_Demo.postman_collection.json  FastAPI_Article_Demo.postman_environment.json
tests/: test_main.py
